--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "express": "^5.2.1",
     "firebase": "^12.7.0",
-    "firebase-admin": "^13.6.0"
+    "firebase-admin": "^13.6.0",
+    "router": "^2.2.0"
   },
   "name": "backend",
   "version": "1.0.0",
